@@ -1,3 +1,7 @@
+##### Mon 18/06/2012
+* op_deduct() in netlist::Range is rewritten along with op_normalise_tree().
+* Seems like I have finally settle down how to implement range operations. Good!
+
 ##### Sun 17/06/2012
 * Finally find out that it is kind impossible (or too difficult) to do range operations with variables when the maximal 
   range is unknown. However, when the maximal range is provided, all range expression can be reduced to const range which
